// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should change its style on outline 1`] = `
<Button
  disabled={false}
  href="#"
  inset={false}
  onClick={null}
  outline={true}
  secondary={false}
>
  <styled.a
    disabled={false}
    href="#"
    inset={false}
    onClick={null}
    outline={true}
    secondary={false}
    theme={
      Object {
        "color": Object {
          "black": "#222222",
          "darkgray": "#515151",
          "error": "#dd3333",
          "gray": "#a9abae",
          "lightgray": "#e5e5e5",
          "overlay": "rgba(0, 0, 0, .15)",
          "primary": "#0081c8",
          "secondary": "#00245f",
          "success": "#33bb33",
          "warn": "#dd3333",
          "white": "#fefefe",
        },
        "font": Object {
          "color": "#222222",
          "family": "\\"Ubuntu\\", sans-serif",
          "size": "16px",
          "spacing": 0,
        },
        "shape": Object {
          "border": ".125rem solid rgba(0, 0, 0, .15)",
          "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
          "margin": ".25rem .125rem",
          "padding": ".75rem .875rem",
          "radius": ".5rem",
          "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
          "size": "16px",
        },
        "transition": Object {
          "time": ".3s ease",
        },
      }
    }
  >
    <StyledComponent
      disabled={false}
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-dnqmqq",
            "isStatic": false,
            "lastClassName": "kDZDPd",
            "rules": Array [
              "
",
              [Function],
              "
",
            ],
          },
          "defaultProps": Object {
            "theme": Object {
              "color": Object {
                "black": "#222222",
                "darkgray": "#515151",
                "error": "#dd3333",
                "gray": "#a9abae",
                "lightgray": "#e5e5e5",
                "overlay": "rgba(0, 0, 0, .15)",
                "primary": "#0081c8",
                "secondary": "#00245f",
                "success": "#33bb33",
                "warn": "#dd3333",
                "white": "#fefefe",
              },
              "font": Object {
                "color": "#222222",
                "family": "\\"Ubuntu\\", sans-serif",
                "size": "16px",
                "spacing": 0,
              },
              "shape": Object {
                "border": ".125rem solid rgba(0, 0, 0, .15)",
                "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                "margin": ".25rem .125rem",
                "padding": ".75rem .875rem",
                "radius": ".5rem",
                "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                "size": "16px",
              },
              "transition": Object {
                "time": ".3s ease",
              },
            },
          },
          "displayName": "styled.a",
          "render": [Function],
          "styledComponentId": "sc-dnqmqq",
          "target": "a",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      href="#"
      inset={false}
      onClick={null}
      outline={true}
      secondary={false}
      theme={
        Object {
          "color": Object {
            "black": "#222222",
            "darkgray": "#515151",
            "error": "#dd3333",
            "gray": "#a9abae",
            "lightgray": "#e5e5e5",
            "overlay": "rgba(0, 0, 0, .15)",
            "primary": "#0081c8",
            "secondary": "#00245f",
            "success": "#33bb33",
            "warn": "#dd3333",
            "white": "#fefefe",
          },
          "font": Object {
            "color": "#222222",
            "family": "\\"Ubuntu\\", sans-serif",
            "size": "16px",
            "spacing": 0,
          },
          "shape": Object {
            "border": ".125rem solid rgba(0, 0, 0, .15)",
            "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
            "margin": ".25rem .125rem",
            "padding": ".75rem .875rem",
            "radius": ".5rem",
            "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
            "size": "16px",
          },
          "transition": Object {
            "time": ".3s ease",
          },
        }
      }
    >
      <a
        className="sc-dnqmqq kDZDPd"
        disabled={false}
        href="#"
        onClick={null}
      >
        <Text
          align="center"
          isLabel={false}
          small={false}
          strong={false}
          transform="none"
          type=""
          white={true}
        >
          <styled.p
            align="center"
            isLabel={false}
            small={false}
            strong={false}
            theme={
              Object {
                "color": Object {
                  "black": "#222222",
                  "darkgray": "#515151",
                  "error": "#dd3333",
                  "gray": "#a9abae",
                  "lightgray": "#e5e5e5",
                  "overlay": "rgba(0, 0, 0, .15)",
                  "primary": "#0081c8",
                  "secondary": "#00245f",
                  "success": "#33bb33",
                  "warn": "#dd3333",
                  "white": "#fefefe",
                },
                "font": Object {
                  "color": "#222222",
                  "family": "\\"Ubuntu\\", sans-serif",
                  "size": "16px",
                  "spacing": 0,
                },
                "shape": Object {
                  "border": ".125rem solid rgba(0, 0, 0, .15)",
                  "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                  "margin": ".25rem .125rem",
                  "padding": ".75rem .875rem",
                  "radius": ".5rem",
                  "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                  "size": "16px",
                },
                "transition": Object {
                  "time": ".3s ease",
                },
              }
            }
            transform="none"
            white={true}
          >
            <StyledComponent
              align="center"
              forwardedClass={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-bdVaJa",
                    "isStatic": false,
                    "lastClassName": "kOSZjX",
                    "rules": Array [
                      "
font-size: ",
                      [Function],
                      ";
",
                      [Function],
                      "
",
                    ],
                  },
                  "defaultProps": Object {
                    "theme": Object {
                      "color": Object {
                        "black": "#222222",
                        "darkgray": "#515151",
                        "error": "#dd3333",
                        "gray": "#a9abae",
                        "lightgray": "#e5e5e5",
                        "overlay": "rgba(0, 0, 0, .15)",
                        "primary": "#0081c8",
                        "secondary": "#00245f",
                        "success": "#33bb33",
                        "warn": "#dd3333",
                        "white": "#fefefe",
                      },
                      "font": Object {
                        "color": "#222222",
                        "family": "\\"Ubuntu\\", sans-serif",
                        "size": "16px",
                        "spacing": 0,
                      },
                      "shape": Object {
                        "border": ".125rem solid rgba(0, 0, 0, .15)",
                        "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                        "margin": ".25rem .125rem",
                        "padding": ".75rem .875rem",
                        "radius": ".5rem",
                        "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                        "size": "16px",
                      },
                      "transition": Object {
                        "time": ".3s ease",
                      },
                    },
                  },
                  "displayName": "styled.p",
                  "render": [Function],
                  "styledComponentId": "sc-bdVaJa",
                  "target": "p",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              isLabel={false}
              small={false}
              strong={false}
              theme={
                Object {
                  "color": Object {
                    "black": "#222222",
                    "darkgray": "#515151",
                    "error": "#dd3333",
                    "gray": "#a9abae",
                    "lightgray": "#e5e5e5",
                    "overlay": "rgba(0, 0, 0, .15)",
                    "primary": "#0081c8",
                    "secondary": "#00245f",
                    "success": "#33bb33",
                    "warn": "#dd3333",
                    "white": "#fefefe",
                  },
                  "font": Object {
                    "color": "#222222",
                    "family": "\\"Ubuntu\\", sans-serif",
                    "size": "16px",
                    "spacing": 0,
                  },
                  "shape": Object {
                    "border": ".125rem solid rgba(0, 0, 0, .15)",
                    "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                    "margin": ".25rem .125rem",
                    "padding": ".75rem .875rem",
                    "radius": ".5rem",
                    "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                    "size": "16px",
                  },
                  "transition": Object {
                    "time": ".3s ease",
                  },
                }
              }
              transform="none"
              white={true}
            >
              <p
                className="sc-bdVaJa kOSZjX"
                transform="none"
              >
                default
              </p>
            </StyledComponent>
          </styled.p>
        </Text>
      </a>
    </StyledComponent>
  </styled.a>
</Button>
`;

exports[`should change its style on success 1`] = `
<Button
  disabled={false}
  href="#"
  inset={false}
  onClick={null}
  outline={false}
  secondary={false}
  success={true}
>
  <styled.a
    disabled={false}
    href="#"
    inset={false}
    onClick={null}
    outline={false}
    secondary={false}
    success={true}
    theme={
      Object {
        "color": Object {
          "black": "#222222",
          "darkgray": "#515151",
          "error": "#dd3333",
          "gray": "#a9abae",
          "lightgray": "#e5e5e5",
          "overlay": "rgba(0, 0, 0, .15)",
          "primary": "#0081c8",
          "secondary": "#00245f",
          "success": "#33bb33",
          "warn": "#dd3333",
          "white": "#fefefe",
        },
        "font": Object {
          "color": "#222222",
          "family": "\\"Ubuntu\\", sans-serif",
          "size": "16px",
          "spacing": 0,
        },
        "shape": Object {
          "border": ".125rem solid rgba(0, 0, 0, .15)",
          "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
          "margin": ".25rem .125rem",
          "padding": ".75rem .875rem",
          "radius": ".5rem",
          "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
          "size": "16px",
        },
        "transition": Object {
          "time": ".3s ease",
        },
      }
    }
  >
    <StyledComponent
      disabled={false}
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-dnqmqq",
            "isStatic": false,
            "lastClassName": "biwuyN",
            "rules": Array [
              "
",
              [Function],
              "
",
            ],
          },
          "defaultProps": Object {
            "theme": Object {
              "color": Object {
                "black": "#222222",
                "darkgray": "#515151",
                "error": "#dd3333",
                "gray": "#a9abae",
                "lightgray": "#e5e5e5",
                "overlay": "rgba(0, 0, 0, .15)",
                "primary": "#0081c8",
                "secondary": "#00245f",
                "success": "#33bb33",
                "warn": "#dd3333",
                "white": "#fefefe",
              },
              "font": Object {
                "color": "#222222",
                "family": "\\"Ubuntu\\", sans-serif",
                "size": "16px",
                "spacing": 0,
              },
              "shape": Object {
                "border": ".125rem solid rgba(0, 0, 0, .15)",
                "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                "margin": ".25rem .125rem",
                "padding": ".75rem .875rem",
                "radius": ".5rem",
                "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                "size": "16px",
              },
              "transition": Object {
                "time": ".3s ease",
              },
            },
          },
          "displayName": "styled.a",
          "render": [Function],
          "styledComponentId": "sc-dnqmqq",
          "target": "a",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      href="#"
      inset={false}
      onClick={null}
      outline={false}
      secondary={false}
      success={true}
      theme={
        Object {
          "color": Object {
            "black": "#222222",
            "darkgray": "#515151",
            "error": "#dd3333",
            "gray": "#a9abae",
            "lightgray": "#e5e5e5",
            "overlay": "rgba(0, 0, 0, .15)",
            "primary": "#0081c8",
            "secondary": "#00245f",
            "success": "#33bb33",
            "warn": "#dd3333",
            "white": "#fefefe",
          },
          "font": Object {
            "color": "#222222",
            "family": "\\"Ubuntu\\", sans-serif",
            "size": "16px",
            "spacing": 0,
          },
          "shape": Object {
            "border": ".125rem solid rgba(0, 0, 0, .15)",
            "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
            "margin": ".25rem .125rem",
            "padding": ".75rem .875rem",
            "radius": ".5rem",
            "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
            "size": "16px",
          },
          "transition": Object {
            "time": ".3s ease",
          },
        }
      }
    >
      <a
        className="sc-dnqmqq biwuyN"
        disabled={false}
        href="#"
        onClick={null}
      >
        <Text
          align="center"
          isLabel={false}
          small={false}
          strong={false}
          transform="none"
          type=""
          white={true}
        >
          <styled.p
            align="center"
            isLabel={false}
            small={false}
            strong={false}
            theme={
              Object {
                "color": Object {
                  "black": "#222222",
                  "darkgray": "#515151",
                  "error": "#dd3333",
                  "gray": "#a9abae",
                  "lightgray": "#e5e5e5",
                  "overlay": "rgba(0, 0, 0, .15)",
                  "primary": "#0081c8",
                  "secondary": "#00245f",
                  "success": "#33bb33",
                  "warn": "#dd3333",
                  "white": "#fefefe",
                },
                "font": Object {
                  "color": "#222222",
                  "family": "\\"Ubuntu\\", sans-serif",
                  "size": "16px",
                  "spacing": 0,
                },
                "shape": Object {
                  "border": ".125rem solid rgba(0, 0, 0, .15)",
                  "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                  "margin": ".25rem .125rem",
                  "padding": ".75rem .875rem",
                  "radius": ".5rem",
                  "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                  "size": "16px",
                },
                "transition": Object {
                  "time": ".3s ease",
                },
              }
            }
            transform="none"
            white={true}
          >
            <StyledComponent
              align="center"
              forwardedClass={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-bdVaJa",
                    "isStatic": false,
                    "lastClassName": "kOSZjX",
                    "rules": Array [
                      "
font-size: ",
                      [Function],
                      ";
",
                      [Function],
                      "
",
                    ],
                  },
                  "defaultProps": Object {
                    "theme": Object {
                      "color": Object {
                        "black": "#222222",
                        "darkgray": "#515151",
                        "error": "#dd3333",
                        "gray": "#a9abae",
                        "lightgray": "#e5e5e5",
                        "overlay": "rgba(0, 0, 0, .15)",
                        "primary": "#0081c8",
                        "secondary": "#00245f",
                        "success": "#33bb33",
                        "warn": "#dd3333",
                        "white": "#fefefe",
                      },
                      "font": Object {
                        "color": "#222222",
                        "family": "\\"Ubuntu\\", sans-serif",
                        "size": "16px",
                        "spacing": 0,
                      },
                      "shape": Object {
                        "border": ".125rem solid rgba(0, 0, 0, .15)",
                        "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                        "margin": ".25rem .125rem",
                        "padding": ".75rem .875rem",
                        "radius": ".5rem",
                        "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                        "size": "16px",
                      },
                      "transition": Object {
                        "time": ".3s ease",
                      },
                    },
                  },
                  "displayName": "styled.p",
                  "render": [Function],
                  "styledComponentId": "sc-bdVaJa",
                  "target": "p",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              isLabel={false}
              small={false}
              strong={false}
              theme={
                Object {
                  "color": Object {
                    "black": "#222222",
                    "darkgray": "#515151",
                    "error": "#dd3333",
                    "gray": "#a9abae",
                    "lightgray": "#e5e5e5",
                    "overlay": "rgba(0, 0, 0, .15)",
                    "primary": "#0081c8",
                    "secondary": "#00245f",
                    "success": "#33bb33",
                    "warn": "#dd3333",
                    "white": "#fefefe",
                  },
                  "font": Object {
                    "color": "#222222",
                    "family": "\\"Ubuntu\\", sans-serif",
                    "size": "16px",
                    "spacing": 0,
                  },
                  "shape": Object {
                    "border": ".125rem solid rgba(0, 0, 0, .15)",
                    "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                    "margin": ".25rem .125rem",
                    "padding": ".75rem .875rem",
                    "radius": ".5rem",
                    "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                    "size": "16px",
                  },
                  "transition": Object {
                    "time": ".3s ease",
                  },
                }
              }
              transform="none"
              white={true}
            >
              <p
                className="sc-bdVaJa kOSZjX"
                transform="none"
              >
                default
              </p>
            </StyledComponent>
          </styled.p>
        </Text>
      </a>
    </StyledComponent>
  </styled.a>
</Button>
`;

exports[`should change its style on warn 1`] = `
<Button
  disabled={false}
  href="#"
  inset={false}
  onClick={null}
  outline={false}
  secondary={false}
  warn={true}
>
  <styled.a
    disabled={false}
    href="#"
    inset={false}
    onClick={null}
    outline={false}
    secondary={false}
    theme={
      Object {
        "color": Object {
          "black": "#222222",
          "darkgray": "#515151",
          "error": "#dd3333",
          "gray": "#a9abae",
          "lightgray": "#e5e5e5",
          "overlay": "rgba(0, 0, 0, .15)",
          "primary": "#0081c8",
          "secondary": "#00245f",
          "success": "#33bb33",
          "warn": "#dd3333",
          "white": "#fefefe",
        },
        "font": Object {
          "color": "#222222",
          "family": "\\"Ubuntu\\", sans-serif",
          "size": "16px",
          "spacing": 0,
        },
        "shape": Object {
          "border": ".125rem solid rgba(0, 0, 0, .15)",
          "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
          "margin": ".25rem .125rem",
          "padding": ".75rem .875rem",
          "radius": ".5rem",
          "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
          "size": "16px",
        },
        "transition": Object {
          "time": ".3s ease",
        },
      }
    }
    warn={true}
  >
    <StyledComponent
      disabled={false}
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-dnqmqq",
            "isStatic": false,
            "lastClassName": "hhHwZc",
            "rules": Array [
              "
",
              [Function],
              "
",
            ],
          },
          "defaultProps": Object {
            "theme": Object {
              "color": Object {
                "black": "#222222",
                "darkgray": "#515151",
                "error": "#dd3333",
                "gray": "#a9abae",
                "lightgray": "#e5e5e5",
                "overlay": "rgba(0, 0, 0, .15)",
                "primary": "#0081c8",
                "secondary": "#00245f",
                "success": "#33bb33",
                "warn": "#dd3333",
                "white": "#fefefe",
              },
              "font": Object {
                "color": "#222222",
                "family": "\\"Ubuntu\\", sans-serif",
                "size": "16px",
                "spacing": 0,
              },
              "shape": Object {
                "border": ".125rem solid rgba(0, 0, 0, .15)",
                "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                "margin": ".25rem .125rem",
                "padding": ".75rem .875rem",
                "radius": ".5rem",
                "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                "size": "16px",
              },
              "transition": Object {
                "time": ".3s ease",
              },
            },
          },
          "displayName": "styled.a",
          "render": [Function],
          "styledComponentId": "sc-dnqmqq",
          "target": "a",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      href="#"
      inset={false}
      onClick={null}
      outline={false}
      secondary={false}
      theme={
        Object {
          "color": Object {
            "black": "#222222",
            "darkgray": "#515151",
            "error": "#dd3333",
            "gray": "#a9abae",
            "lightgray": "#e5e5e5",
            "overlay": "rgba(0, 0, 0, .15)",
            "primary": "#0081c8",
            "secondary": "#00245f",
            "success": "#33bb33",
            "warn": "#dd3333",
            "white": "#fefefe",
          },
          "font": Object {
            "color": "#222222",
            "family": "\\"Ubuntu\\", sans-serif",
            "size": "16px",
            "spacing": 0,
          },
          "shape": Object {
            "border": ".125rem solid rgba(0, 0, 0, .15)",
            "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
            "margin": ".25rem .125rem",
            "padding": ".75rem .875rem",
            "radius": ".5rem",
            "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
            "size": "16px",
          },
          "transition": Object {
            "time": ".3s ease",
          },
        }
      }
      warn={true}
    >
      <a
        className="sc-dnqmqq hhHwZc"
        disabled={false}
        href="#"
        onClick={null}
      >
        <Text
          align="center"
          isLabel={false}
          small={false}
          strong={false}
          transform="none"
          type=""
          white={true}
        >
          <styled.p
            align="center"
            isLabel={false}
            small={false}
            strong={false}
            theme={
              Object {
                "color": Object {
                  "black": "#222222",
                  "darkgray": "#515151",
                  "error": "#dd3333",
                  "gray": "#a9abae",
                  "lightgray": "#e5e5e5",
                  "overlay": "rgba(0, 0, 0, .15)",
                  "primary": "#0081c8",
                  "secondary": "#00245f",
                  "success": "#33bb33",
                  "warn": "#dd3333",
                  "white": "#fefefe",
                },
                "font": Object {
                  "color": "#222222",
                  "family": "\\"Ubuntu\\", sans-serif",
                  "size": "16px",
                  "spacing": 0,
                },
                "shape": Object {
                  "border": ".125rem solid rgba(0, 0, 0, .15)",
                  "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                  "margin": ".25rem .125rem",
                  "padding": ".75rem .875rem",
                  "radius": ".5rem",
                  "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                  "size": "16px",
                },
                "transition": Object {
                  "time": ".3s ease",
                },
              }
            }
            transform="none"
            white={true}
          >
            <StyledComponent
              align="center"
              forwardedClass={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-bdVaJa",
                    "isStatic": false,
                    "lastClassName": "kOSZjX",
                    "rules": Array [
                      "
font-size: ",
                      [Function],
                      ";
",
                      [Function],
                      "
",
                    ],
                  },
                  "defaultProps": Object {
                    "theme": Object {
                      "color": Object {
                        "black": "#222222",
                        "darkgray": "#515151",
                        "error": "#dd3333",
                        "gray": "#a9abae",
                        "lightgray": "#e5e5e5",
                        "overlay": "rgba(0, 0, 0, .15)",
                        "primary": "#0081c8",
                        "secondary": "#00245f",
                        "success": "#33bb33",
                        "warn": "#dd3333",
                        "white": "#fefefe",
                      },
                      "font": Object {
                        "color": "#222222",
                        "family": "\\"Ubuntu\\", sans-serif",
                        "size": "16px",
                        "spacing": 0,
                      },
                      "shape": Object {
                        "border": ".125rem solid rgba(0, 0, 0, .15)",
                        "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                        "margin": ".25rem .125rem",
                        "padding": ".75rem .875rem",
                        "radius": ".5rem",
                        "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                        "size": "16px",
                      },
                      "transition": Object {
                        "time": ".3s ease",
                      },
                    },
                  },
                  "displayName": "styled.p",
                  "render": [Function],
                  "styledComponentId": "sc-bdVaJa",
                  "target": "p",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              isLabel={false}
              small={false}
              strong={false}
              theme={
                Object {
                  "color": Object {
                    "black": "#222222",
                    "darkgray": "#515151",
                    "error": "#dd3333",
                    "gray": "#a9abae",
                    "lightgray": "#e5e5e5",
                    "overlay": "rgba(0, 0, 0, .15)",
                    "primary": "#0081c8",
                    "secondary": "#00245f",
                    "success": "#33bb33",
                    "warn": "#dd3333",
                    "white": "#fefefe",
                  },
                  "font": Object {
                    "color": "#222222",
                    "family": "\\"Ubuntu\\", sans-serif",
                    "size": "16px",
                    "spacing": 0,
                  },
                  "shape": Object {
                    "border": ".125rem solid rgba(0, 0, 0, .15)",
                    "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                    "margin": ".25rem .125rem",
                    "padding": ".75rem .875rem",
                    "radius": ".5rem",
                    "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                    "size": "16px",
                  },
                  "transition": Object {
                    "time": ".3s ease",
                  },
                }
              }
              transform="none"
              white={true}
            >
              <p
                className="sc-bdVaJa kOSZjX"
                transform="none"
              >
                default
              </p>
            </StyledComponent>
          </styled.p>
        </Text>
      </a>
    </StyledComponent>
  </styled.a>
</Button>
`;

exports[`should render a anchor 1`] = `
<Button
  disabled={false}
  href="#"
  inset={false}
  onClick={null}
  outline={false}
  secondary={false}
>
  <styled.a
    disabled={false}
    href="#"
    inset={false}
    onClick={null}
    outline={false}
    secondary={false}
    theme={
      Object {
        "color": Object {
          "black": "#222222",
          "darkgray": "#515151",
          "error": "#dd3333",
          "gray": "#a9abae",
          "lightgray": "#e5e5e5",
          "overlay": "rgba(0, 0, 0, .15)",
          "primary": "#0081c8",
          "secondary": "#00245f",
          "success": "#33bb33",
          "warn": "#dd3333",
          "white": "#fefefe",
        },
        "font": Object {
          "color": "#222222",
          "family": "\\"Ubuntu\\", sans-serif",
          "size": "16px",
          "spacing": 0,
        },
        "shape": Object {
          "border": ".125rem solid rgba(0, 0, 0, .15)",
          "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
          "margin": ".25rem .125rem",
          "padding": ".75rem .875rem",
          "radius": ".5rem",
          "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
          "size": "16px",
        },
        "transition": Object {
          "time": ".3s ease",
        },
      }
    }
  >
    <StyledComponent
      disabled={false}
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-dnqmqq",
            "isStatic": false,
            "lastClassName": "eimDpD",
            "rules": Array [
              "
",
              [Function],
              "
",
            ],
          },
          "defaultProps": Object {
            "theme": Object {
              "color": Object {
                "black": "#222222",
                "darkgray": "#515151",
                "error": "#dd3333",
                "gray": "#a9abae",
                "lightgray": "#e5e5e5",
                "overlay": "rgba(0, 0, 0, .15)",
                "primary": "#0081c8",
                "secondary": "#00245f",
                "success": "#33bb33",
                "warn": "#dd3333",
                "white": "#fefefe",
              },
              "font": Object {
                "color": "#222222",
                "family": "\\"Ubuntu\\", sans-serif",
                "size": "16px",
                "spacing": 0,
              },
              "shape": Object {
                "border": ".125rem solid rgba(0, 0, 0, .15)",
                "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                "margin": ".25rem .125rem",
                "padding": ".75rem .875rem",
                "radius": ".5rem",
                "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                "size": "16px",
              },
              "transition": Object {
                "time": ".3s ease",
              },
            },
          },
          "displayName": "styled.a",
          "render": [Function],
          "styledComponentId": "sc-dnqmqq",
          "target": "a",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      href="#"
      inset={false}
      onClick={null}
      outline={false}
      secondary={false}
      theme={
        Object {
          "color": Object {
            "black": "#222222",
            "darkgray": "#515151",
            "error": "#dd3333",
            "gray": "#a9abae",
            "lightgray": "#e5e5e5",
            "overlay": "rgba(0, 0, 0, .15)",
            "primary": "#0081c8",
            "secondary": "#00245f",
            "success": "#33bb33",
            "warn": "#dd3333",
            "white": "#fefefe",
          },
          "font": Object {
            "color": "#222222",
            "family": "\\"Ubuntu\\", sans-serif",
            "size": "16px",
            "spacing": 0,
          },
          "shape": Object {
            "border": ".125rem solid rgba(0, 0, 0, .15)",
            "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
            "margin": ".25rem .125rem",
            "padding": ".75rem .875rem",
            "radius": ".5rem",
            "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
            "size": "16px",
          },
          "transition": Object {
            "time": ".3s ease",
          },
        }
      }
    >
      <a
        className="sc-dnqmqq eimDpD"
        disabled={false}
        href="#"
        onClick={null}
      >
        <Text
          align="center"
          isLabel={false}
          small={false}
          strong={false}
          transform="none"
          type=""
          white={true}
        >
          <styled.p
            align="center"
            isLabel={false}
            small={false}
            strong={false}
            theme={
              Object {
                "color": Object {
                  "black": "#222222",
                  "darkgray": "#515151",
                  "error": "#dd3333",
                  "gray": "#a9abae",
                  "lightgray": "#e5e5e5",
                  "overlay": "rgba(0, 0, 0, .15)",
                  "primary": "#0081c8",
                  "secondary": "#00245f",
                  "success": "#33bb33",
                  "warn": "#dd3333",
                  "white": "#fefefe",
                },
                "font": Object {
                  "color": "#222222",
                  "family": "\\"Ubuntu\\", sans-serif",
                  "size": "16px",
                  "spacing": 0,
                },
                "shape": Object {
                  "border": ".125rem solid rgba(0, 0, 0, .15)",
                  "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                  "margin": ".25rem .125rem",
                  "padding": ".75rem .875rem",
                  "radius": ".5rem",
                  "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                  "size": "16px",
                },
                "transition": Object {
                  "time": ".3s ease",
                },
              }
            }
            transform="none"
            white={true}
          >
            <StyledComponent
              align="center"
              forwardedClass={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-bdVaJa",
                    "isStatic": false,
                    "lastClassName": "kOSZjX",
                    "rules": Array [
                      "
font-size: ",
                      [Function],
                      ";
",
                      [Function],
                      "
",
                    ],
                  },
                  "defaultProps": Object {
                    "theme": Object {
                      "color": Object {
                        "black": "#222222",
                        "darkgray": "#515151",
                        "error": "#dd3333",
                        "gray": "#a9abae",
                        "lightgray": "#e5e5e5",
                        "overlay": "rgba(0, 0, 0, .15)",
                        "primary": "#0081c8",
                        "secondary": "#00245f",
                        "success": "#33bb33",
                        "warn": "#dd3333",
                        "white": "#fefefe",
                      },
                      "font": Object {
                        "color": "#222222",
                        "family": "\\"Ubuntu\\", sans-serif",
                        "size": "16px",
                        "spacing": 0,
                      },
                      "shape": Object {
                        "border": ".125rem solid rgba(0, 0, 0, .15)",
                        "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                        "margin": ".25rem .125rem",
                        "padding": ".75rem .875rem",
                        "radius": ".5rem",
                        "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                        "size": "16px",
                      },
                      "transition": Object {
                        "time": ".3s ease",
                      },
                    },
                  },
                  "displayName": "styled.p",
                  "render": [Function],
                  "styledComponentId": "sc-bdVaJa",
                  "target": "p",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              isLabel={false}
              small={false}
              strong={false}
              theme={
                Object {
                  "color": Object {
                    "black": "#222222",
                    "darkgray": "#515151",
                    "error": "#dd3333",
                    "gray": "#a9abae",
                    "lightgray": "#e5e5e5",
                    "overlay": "rgba(0, 0, 0, .15)",
                    "primary": "#0081c8",
                    "secondary": "#00245f",
                    "success": "#33bb33",
                    "warn": "#dd3333",
                    "white": "#fefefe",
                  },
                  "font": Object {
                    "color": "#222222",
                    "family": "\\"Ubuntu\\", sans-serif",
                    "size": "16px",
                    "spacing": 0,
                  },
                  "shape": Object {
                    "border": ".125rem solid rgba(0, 0, 0, .15)",
                    "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                    "margin": ".25rem .125rem",
                    "padding": ".75rem .875rem",
                    "radius": ".5rem",
                    "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                    "size": "16px",
                  },
                  "transition": Object {
                    "time": ".3s ease",
                  },
                }
              }
              transform="none"
              white={true}
            >
              <p
                className="sc-bdVaJa kOSZjX"
                transform="none"
              >
                default
              </p>
            </StyledComponent>
          </styled.p>
        </Text>
      </a>
    </StyledComponent>
  </styled.a>
</Button>
`;

exports[`should render a button 1`] = `
<Button
  disabled={false}
  href={null}
  inset={false}
  onClick={[Function]}
  outline={false}
  secondary={false}
>
  <styled.button
    disabled={false}
    href={null}
    inset={false}
    onClick={[Function]}
    outline={false}
    secondary={false}
    theme={
      Object {
        "color": Object {
          "black": "#222222",
          "darkgray": "#515151",
          "error": "#dd3333",
          "gray": "#a9abae",
          "lightgray": "#e5e5e5",
          "overlay": "rgba(0, 0, 0, .15)",
          "primary": "#0081c8",
          "secondary": "#00245f",
          "success": "#33bb33",
          "warn": "#dd3333",
          "white": "#fefefe",
        },
        "font": Object {
          "color": "#222222",
          "family": "\\"Ubuntu\\", sans-serif",
          "size": "16px",
          "spacing": 0,
        },
        "shape": Object {
          "border": ".125rem solid rgba(0, 0, 0, .15)",
          "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
          "margin": ".25rem .125rem",
          "padding": ".75rem .875rem",
          "radius": ".5rem",
          "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
          "size": "16px",
        },
        "transition": Object {
          "time": ".3s ease",
        },
      }
    }
  >
    <StyledComponent
      disabled={false}
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-htoDjs",
            "isStatic": false,
            "lastClassName": "hTeMnD",
            "rules": Array [
              "
",
              [Function],
              "
",
            ],
          },
          "defaultProps": Object {
            "theme": Object {
              "color": Object {
                "black": "#222222",
                "darkgray": "#515151",
                "error": "#dd3333",
                "gray": "#a9abae",
                "lightgray": "#e5e5e5",
                "overlay": "rgba(0, 0, 0, .15)",
                "primary": "#0081c8",
                "secondary": "#00245f",
                "success": "#33bb33",
                "warn": "#dd3333",
                "white": "#fefefe",
              },
              "font": Object {
                "color": "#222222",
                "family": "\\"Ubuntu\\", sans-serif",
                "size": "16px",
                "spacing": 0,
              },
              "shape": Object {
                "border": ".125rem solid rgba(0, 0, 0, .15)",
                "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                "margin": ".25rem .125rem",
                "padding": ".75rem .875rem",
                "radius": ".5rem",
                "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                "size": "16px",
              },
              "transition": Object {
                "time": ".3s ease",
              },
            },
          },
          "displayName": "styled.button",
          "render": [Function],
          "styledComponentId": "sc-htoDjs",
          "target": "button",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      href={null}
      inset={false}
      onClick={[Function]}
      outline={false}
      secondary={false}
      theme={
        Object {
          "color": Object {
            "black": "#222222",
            "darkgray": "#515151",
            "error": "#dd3333",
            "gray": "#a9abae",
            "lightgray": "#e5e5e5",
            "overlay": "rgba(0, 0, 0, .15)",
            "primary": "#0081c8",
            "secondary": "#00245f",
            "success": "#33bb33",
            "warn": "#dd3333",
            "white": "#fefefe",
          },
          "font": Object {
            "color": "#222222",
            "family": "\\"Ubuntu\\", sans-serif",
            "size": "16px",
            "spacing": 0,
          },
          "shape": Object {
            "border": ".125rem solid rgba(0, 0, 0, .15)",
            "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
            "margin": ".25rem .125rem",
            "padding": ".75rem .875rem",
            "radius": ".5rem",
            "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
            "size": "16px",
          },
          "transition": Object {
            "time": ".3s ease",
          },
        }
      }
    >
      <button
        className="sc-htoDjs hTeMnD"
        disabled={false}
        href={null}
        onClick={[Function]}
      >
        <Text
          align="center"
          isLabel={false}
          small={false}
          strong={false}
          transform="none"
          type=""
          white={true}
        >
          <styled.p
            align="center"
            isLabel={false}
            small={false}
            strong={false}
            theme={
              Object {
                "color": Object {
                  "black": "#222222",
                  "darkgray": "#515151",
                  "error": "#dd3333",
                  "gray": "#a9abae",
                  "lightgray": "#e5e5e5",
                  "overlay": "rgba(0, 0, 0, .15)",
                  "primary": "#0081c8",
                  "secondary": "#00245f",
                  "success": "#33bb33",
                  "warn": "#dd3333",
                  "white": "#fefefe",
                },
                "font": Object {
                  "color": "#222222",
                  "family": "\\"Ubuntu\\", sans-serif",
                  "size": "16px",
                  "spacing": 0,
                },
                "shape": Object {
                  "border": ".125rem solid rgba(0, 0, 0, .15)",
                  "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                  "margin": ".25rem .125rem",
                  "padding": ".75rem .875rem",
                  "radius": ".5rem",
                  "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                  "size": "16px",
                },
                "transition": Object {
                  "time": ".3s ease",
                },
              }
            }
            transform="none"
            white={true}
          >
            <StyledComponent
              align="center"
              forwardedClass={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-bdVaJa",
                    "isStatic": false,
                    "lastClassName": "kOSZjX",
                    "rules": Array [
                      "
font-size: ",
                      [Function],
                      ";
",
                      [Function],
                      "
",
                    ],
                  },
                  "defaultProps": Object {
                    "theme": Object {
                      "color": Object {
                        "black": "#222222",
                        "darkgray": "#515151",
                        "error": "#dd3333",
                        "gray": "#a9abae",
                        "lightgray": "#e5e5e5",
                        "overlay": "rgba(0, 0, 0, .15)",
                        "primary": "#0081c8",
                        "secondary": "#00245f",
                        "success": "#33bb33",
                        "warn": "#dd3333",
                        "white": "#fefefe",
                      },
                      "font": Object {
                        "color": "#222222",
                        "family": "\\"Ubuntu\\", sans-serif",
                        "size": "16px",
                        "spacing": 0,
                      },
                      "shape": Object {
                        "border": ".125rem solid rgba(0, 0, 0, .15)",
                        "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                        "margin": ".25rem .125rem",
                        "padding": ".75rem .875rem",
                        "radius": ".5rem",
                        "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                        "size": "16px",
                      },
                      "transition": Object {
                        "time": ".3s ease",
                      },
                    },
                  },
                  "displayName": "styled.p",
                  "render": [Function],
                  "styledComponentId": "sc-bdVaJa",
                  "target": "p",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              isLabel={false}
              small={false}
              strong={false}
              theme={
                Object {
                  "color": Object {
                    "black": "#222222",
                    "darkgray": "#515151",
                    "error": "#dd3333",
                    "gray": "#a9abae",
                    "lightgray": "#e5e5e5",
                    "overlay": "rgba(0, 0, 0, .15)",
                    "primary": "#0081c8",
                    "secondary": "#00245f",
                    "success": "#33bb33",
                    "warn": "#dd3333",
                    "white": "#fefefe",
                  },
                  "font": Object {
                    "color": "#222222",
                    "family": "\\"Ubuntu\\", sans-serif",
                    "size": "16px",
                    "spacing": 0,
                  },
                  "shape": Object {
                    "border": ".125rem solid rgba(0, 0, 0, .15)",
                    "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                    "margin": ".25rem .125rem",
                    "padding": ".75rem .875rem",
                    "radius": ".5rem",
                    "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                    "size": "16px",
                  },
                  "transition": Object {
                    "time": ".3s ease",
                  },
                }
              }
              transform="none"
              white={true}
            >
              <p
                className="sc-bdVaJa kOSZjX"
                transform="none"
              >
                default
              </p>
            </StyledComponent>
          </styled.p>
        </Text>
      </button>
    </StyledComponent>
  </styled.button>
</Button>
`;
